replacing "empty" with ""

--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -537,7 +537,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 }
 
 .hero-article::before {
-  content: empty;
+  content: "";
   background: rgba(0, 0, 0, 0.8);
   position: absolute;
   top: 0;
